--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li><a href='#'>Sign Up</a></li>
+            <li><a href='https://notihub.io/sign-up'>Sign Up</a></li>
             <li><a href='https://notihub.io'>2020 © Notihub</a></li>
         </ul>
     </div>
