--- a/index.html
+++ b/index.html
@@ -196,20 +196,20 @@
   color: #f92672;
 }
     </style>
-    <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
-    <link href="stylesheets/print.css" rel="stylesheet" media="print" />
-      <script src="javascripts/all.js"></script>
+    <link href="stylesheets/screen-7aec8803.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/print-ca4e1909.css" rel="stylesheet" media="print" />
+      <script src="javascripts/all-917ede52.js"></script>
   </head>
 
   <body class="index" data-languages="[&quot;curl&quot;,&quot;java&quot;,&quot;javascript&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
-        <img src="images/navbar.png" alt="Navbar" />
+        <img src="images/navbar-cad8cdcb.png" alt="Navbar" />
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo.png" class="logo" alt="Logo" />
+      <img src="images/logo-87e1484a.png" class="logo" alt="Logo" />
         <div class="lang-selector">
               <a href="#" data-language-name="curl">curl</a>
               <a href="#" data-language-name="java">java</a>
